# 2025_kn41_test

./: .gitignore  README.md
1_lab/: README.md  main.py  nb.ipynb
2_lab/: README.md  note.ipynb  test.txt
3_lab/: README.md  REPORT.md  __init__.py  app.py  assert_figure.py  assert_input.py  assert_name.py  dice.py  note.ipynb  pyproject.toml  test_dice.py  test_dice_pytest.py  test_figure.py  test_figure_pytest.py
init/: README.md
screenshots/: README.md
